<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddStoryActivity"
    android:padding="16dp">
    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_preview" />
    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="8dp"
        android:hint="@string/add_description"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_preview"
        android:layout_marginBottom="16dp"
        android:inputType="text"
        android:gravity="top"
        android:background="@drawable/rounded_corner_edit_text"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
        android:autofillHints="" />
    <CheckBox
        android:id="@+id/cb_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ed_add_description"
        android:text="@string/send_location"
        android:textAlignment="textEnd"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_story"
        app:layout_constraintBottom_toBottomOf="parent" />
    <ProgressBar
        android:id="@+id/pb_add_story"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>