...
    <string name="sign_out">Sign out</string>
    <string name="dark_mode">Dark mode</string>
    <string name="stories_photo">Stories Photo</string>
    <string name="error_connection">Failure connection.\nPlease check your network</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_description">Add Description</string>
    <string name="image_preview">Photo Preview</string>
    <string name="select_photo_dialog">Select photo…</string>
    <string name="gallery_dialog">Choose a picture</string>
    <string name="failed_add_story">Failed to add story.\nPlease try again</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="no_data_text">Found no data</string>
    <string name="app_desc">Keep connected with sharing story</string>
    <!-- TODO: Remove or change this placeholder text -->
...
