...
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="User"
                android:transitionName="name_story"/>
            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/tv_detail_name"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
                tools:text="Story description"/>
...
